- #7432 Only show close to tray reminder when not quitting the app
- #7434 Show dark logo in dark mode and improve .env loader
- #7435 Add reset settings menu action and env var
- #7436 Introduced new env vars for testing
- #7437 Show message box explaining why settings are read-only
- #7438 Compare result of `clickedButton` instead of `exec`
- #7440 Fixed light logo filename on about screen

# 1.14.6

Bug fixes:

- #7208 Crash on FreeBSD when pressing special keys on a client
- #7241 Change the default signature hashing algorithm for sha256
- #7242 TLS certificate generation for Flatpak

Enhancements:

- #7222 Initiate non-TLS connection from server
- #7225 Initiate TLS connection from server
- #7239 Single app for server and client
- #7248 Firewall exception for client
- #7250 Builds for Fedora 37 and 38

# 1.14.5

Bug fixes:

- #7182 Remove unused TLS options from the GUI on client
- #7186 No additional TLS options for all users setting

Enhancements:

- #7183 Refactoring for Synergy 3 licenses
- #7190 Maintenance license serial key support
- #7193 Support for maintenance licenses in China
- #7197 Special contributor mentions on the about screen
- #7203 License registration for more editions
- #7210 Update macos workflow to use macos-latest
- #7213 Update azure pipelines to use macos-latest

# 1.14.4

Bug fixes:

- #7144 Double lines when pasting text from Linux to Windows
- #7149 Address issues with modifiers and dead keys
- #7163 Fix compilation issues for FreeBSD
- #7172 Memory leaks in language sync and TLS functionality
- #7175 Memory leaks in copy/paste and drag and drop functionality
- #7179 Disable drag and drop by default

Enhancements:

- #7143 Ability to stop Synergy on the login screen
- #7157 Only accept correct license for specific edition
- #7188 Only accept correct license for personal edition
- #7166 Replace language notifications with warnings in logs
- #7181 Fedora 36 support to CI system
- #7177 Create workflow for flatpak build support